Pesan commit di sini

--- a/do-while.html
+++ b/do-while.html
@@ -4,23 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>For loop</title>
+  <title>Do while</title>
 </head>
 <body>
   <script type="text/javascript" charset="utf-8">
-    //perulangan tanpa henti
-    //for(;;) {
-     // alert("jawa");}
-     
-     //perulangan dengan kondisi
-     /*let counter = 1;
-     for(;counter <= 10;){
+  
+    let counter = 1
+    while(counter <= 5){
        document.writeln(`<p>Perulangan ke-${counter}</p>`);
-       counter ++;
-     }*/
-     
-     for(let counter = 1; counter <= 40; counter++){
-       document.writeln(`<p>Jawa${counter}</p>`);
+       counter++;
      }
   </script>
 </body>
